--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.12",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@mui/x-data-grid": "^6.19.6",
+    "@react-pdf/renderer": "^3.4.0",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.8",
     "jwt-decode": "^4.0.0",
