--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-data-grid": "^6.19.6",
     "@react-pdf/renderer": "^3.4.0",
     "@reduxjs/toolkit": "^2.2.1",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.6.8",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
