chore:fix error icon imports

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Development API Endpoint
-VITE_REACT_APP_API_ENDPOINT=http://localhost:4122/api
+VITE_REACT_APP_API_ENDPOINT=http://128.199.66.214:4122/api
 
 #Poduction API Endpoint
-# VITE_REACT_APP_API_ENDPOINT=http://localhost:2122/api
+# VITE_REACT_APP_API_ENDPOINT=http://localhost:4122/api
