chore:env file updated

--- a/.env
+++ b/.env
@@ -1,5 +1,12 @@
-# Development API Endpoint
+
+# Prduction Configuration
+# API Endpoint
 VITE_REACT_APP_API_ENDPOINT=http://128.199.66.214:4122/api
 
-#Poduction API Endpoint
+# Cookie domain origin (Change this to Actual domain host name of the frontend Ex. google.com)
+VITE_REACT_APP_COOKIE_DOMAIN=128.199.66.214
+
+#------------------------------------------------------
+#API Endpoint
 # VITE_REACT_APP_API_ENDPOINT=http://localhost:4122/api
+# VITE_REACT_APP_COOKIE_DOMAIN=localhost
